帖子顶级评论获取接口实现
